fixed semi-fouc for navigation
previously navigation would flash with everything open and then close
itself once the page loaded fully and javascript was run

this didn't look great and was at points confusing. this fixes it.

--- a/source/_assets/stylesheets/style.css
+++ b/source/_assets/stylesheets/style.css
@@ -398,6 +398,10 @@ body:before {
 	cursor: pointer;
 }
 
+#nav-menu li.collapsibleListClosed > ul {
+  display: none;
+}
+
 #nav-menu li {
   border-top:1px solid rgb(27,28,30);
   background-color: rgb(30,36,47);
